# erpnextkta

./: .gitignore  CHANGELOG.md  Gemfile  README.md  license.txt  pyproject.toml  setup.py
.github/: COMMIT_TEMPLATE  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  epic.md  feature_request.md  question.md  task.md
.github/workflows/: auto-assign.yml  pr-labeler.yml  release.yml  tests.yml
ch-templates/: .release_notes.md.j2  CHANGELOG.md.j2
docs/: _config.yml  index.md  install.md  modules.md
docs/_layouts/: default.html
docs/assets/css/: style.css
erpnextkta/: __init__.py  api.py  hooks.py  modules.txt  tasks.py
erpnextkta/erpnextkta/custom/: address.json  bom.json  bom_item.json  calisma_karti.json  customer.json  item.json  item_barcode.json  item_customer_detail.json  item_price.json  item_quality_inspection_parameter.json  item_supplier.json  kalite_8d_formu.json  kta_depo_etiketleri.json  non_conformance.json  operation.json  packed_item.json  party_account.json  purchase_order.json  purchase_order_item.json  purchase_receipt.json  purchase_receipt_item.json  purchase_taxes_and_charges.json  quality_feedback.json  quality_feedback_parameter.json  quality_inspection.json  quotation.json  quotation_item.json  sales_order.json  sales_order_item.json  sales_taxes_and_charges.json  stock_entry.json  stock_entry_detail.json  supplier.json  work_order.json
erpnextkta/erpnextkta/doctype/calisma_karti/: calisma_karti.js  calisma_karti.json  calisma_karti.py
erpnextkta/erpnextkta/doctype/calisma_karti_hurda/: calisma_karti_hurda.json  calisma_karti_hurda.py
erpnextkta/erpnextkta/doctype/d1_takim_uyeleri/: d1_takim_uyeleri.json  d1_takim_uyeleri.py
erpnextkta/erpnextkta/doctype/d3_digerleri/: d3_digerleri.json  d3_digerleri.py
erpnextkta/erpnextkta/doctype/d5_duzeltici_faaliyet/: d5_duzeltici_faaliyet.json  d5_duzeltici_faaliyet.py
erpnextkta/erpnextkta/doctype/d6_duzeltici_faaliyet_uygulama/: d6_duzeltici_faaliyet_uygulama.json  d6_duzeltici_faaliyet_uygulama.py
erpnextkta/erpnextkta/doctype/d7_onleyici_faaliyet/: d7_onleyici_faaliyet.json  d7_onleyici_faaliyet.py
erpnextkta/erpnextkta/doctype/kalite_8d_formu/: kalite_8d_formu.js  kalite_8d_formu.json  kalite_8d_formu.py  test_kalite_8d_formu.py
erpnextkta/erpnextkta/doctype/kta_amboss_takimlari/: kta_amboss_takimlari.json  kta_amboss_takimlari.py
erpnextkta/erpnextkta/doctype/kta_antrepo_beyanname_no/: kta_antrepo_beyanname_no.js  kta_antrepo_beyanname_no.json  kta_antrepo_beyanname_no.py  test_kta_antrepo_beyanname_no.py
erpnextkta/erpnextkta/doctype/kta_mobil_depo/: kta_mobil_depo.js  (+3 more)
erpnextkta/fixtures/: asset_category.json  client_script.json  custom_field.json  customs_tariff_number.json  doctype.json  kta_antrepo_beyanname_no.json  kta_ithalat_kisa_malzeme_aciklamalari.json  kta_olcu_metodu.json  kta_operasyon_grubu.json  olcu_metodu.json  property_setter.json  role_profile.json  tr_gumruk_idareleri.json  tr_gumruk_ve_dis_ticaret_bolge_mudurlukleri.json
erpnextkta/kta_calisma_karti/: api.py
erpnextkta/kta_calisma_karti/custom/: calisma_karti.json
erpnextkta/kta_mrp/custom/: item.json
erpnextkta/kta_stock/realtime/: stock_reco_dashboard.py
erpnextkta/overrides/: KTAPurchaseOrder.py  KTAPurchaseReceipt.py  KTAQualityInspection.py  KTAStockEntry.py  KTAWorkOrder.py  KTAbom.py  KTAstock_controller.py  PurchaseReceipt.py  __init__.py  job_card_status.py  print_settings.py  serial_batch_bundle.py  serial_batch_bundle_doc.py  stock_reconciliation.py
erpnextkta/public/js/: material_transfer_patch.js  stock_entry_get_items_from_calisma_karti.js  stock_reconciliation.js
erpnextkta/public/kta-calisma-karti/: App.vue
erpnextkta/public/kta_calisma_karti/: App.vue  kta-calisma-karti.bundle.js  kta_calisma_karti.bundle.js
erpnextkta/public/stock-reco-dashboard/: App.vue  stock-reco-dashboard.bundle.js
erpnextkta/rest-api/: stock_reconciliation.py  stock_reconciliation_dashboard.py  stock_reconciliation_lock.py
(+221 files in other folders)
