[project]
name = "erpnextkta"
version = "0.0.0"
authors = [
    { name = "Framras AS", email = "bilgi@framras.com.tr" }
]
description = "KTA Endustri ozellestirmeleri CERKEZKOY TURKIYE"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.semantic_release]
# Single source of truth: project.version in pyproject.toml
version_toml = ["pyproject.toml:project.version"]

# Use conventional commits parser (v9+)
commit_parser = "conventional"

# Tag format (tags like v1.2.3 will be created)
tag_format = "v{version}"
allow_zero_version = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
# For use in CI:
token = { env = "GH_TOKEN" }
ignore_token_for_push = false
insecure = false