[project]
name = "erpnextkta"
version = "0.3.4"
authors = [
    { name = "Framras AS", email = "bilgi@framras.com.tr" }
]
description = "KTA Endustri ozellestirmeleri CERKEZKOY TURKIYE"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.semantic_release]
# Version variable location
version_variables = [
    "pyproject.toml:project.version",
    "erpnextkta/__init__.py:__version__",
]

# Branch configuration
branch = "main"

# Use conventional commits parser
commit_parser = "angular"

# Tag format (tags like v1.2.3 will be created)
tag_format = "v{version}"
allow_zero_version = true

# Build command (optional, leave empty if not needed)
build_command = ""

[tool.semantic_release.remote]
name = "origin"
type = "github"
# For use in CI:
token = { env = "GH_TOKEN" }
ignore_token_for_push = false

[tool.semantic_release.changelog]
# CHANGELOG’u her release’te en üste yeni versiyonu ekle
mode = "update"
insertion_flag = "<!-- version list -->"

# Kendi template dizinimiz
template_dir = "ch-templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"